# voxelengine-opengl-cpp

./: .gitignore  .todo  CMakeLists.txt  LISENCE  Makefile  README.md  mcterrain.cpp  notes.txt  test  test.cpp
includes/glad/: glad.h
shaders/: shader.frag  shader.vert
src/: glad.c  main.cpp  main.hpp  text.txt
src/Shader/: Shader.cpp
